# planai

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROMPT_OPTIMIZATION.md  README.md  TODO.md  jest.config.cjs  package-lock.json  package.json  pyproject.toml
.github/instructions/: planai.instructions.md
.github/workflows/: ci_cd.yml
docs/: requirements.txt
docs-astro/: astro.config.mjs  package-lock.json  package.json
docs-astro/examples/: example-2.py  example-3.py  example-4.py  example.py
docs-astro/src/components/: ContentPanel.astro  DocumentToolbar.astro
docs-astro/src/content/docs/: index.mdx
docs-astro/src/content/docs/api/: graph.md  index.md  task.md  taskworker.md
docs-astro/src/content/docs/cli/: overview.md  prompt-optimization.md
docs-astro/src/content/docs/features/: caching.md  llm-integration.md  subgraphs.md  taskworkers.md
docs-astro/src/content/docs/getting-started/: installation.md  quickstart.md
docs-astro/src/content/docs/guide/: monitoring.md  prompts.md  provenance.md  testing.md  usage.md
docs-astro/src/integrations/: generate-llms-txt.mjs
docs-astro/src/plugins/: inject-raw-content.mjs
docs/source/: api.rst  cli.rst  conf.py  index.rst  installation.rst  prompts.rst  provenance.rst  usage.rst
examples/deepsearch/: LICENSE  README.md  deepsearch.py  graph.py  pyproject.toml  session.py  setup.py
examples/deepsearch/deepsearch/: __main__.py  debug.py  deepsearch.py  graph.py  session.py  user_session.py
examples/deepsearch/frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.js
examples/deepsearch/frontend/src/: app.css
examples/deepsearch/frontend/src/lib/components/: AudioPlayer.svelte  ChatInterface.svelte  SessionManager.svelte  SettingsSidebar.svelte
examples/deepsearch/frontend/src/lib/stores/: configStore.svelte.js  messageBus.svelte.js  sessionStore.svelte.js  trackStore.js
examples/deepsearch/frontend/src/routes/: +page.svelte
examples/deepsearch/saved_sessions/: testing.json
examples/deepsearch/tests/: conftest.py  test_deepsearch.py  test_session.py
examples/releasenotes/: README.md  pyproject.toml  releasenotes.py
examples/social/: browse.py  config.yaml  pyproject.toml  social_app.py
examples/textbook/: README.md  pyproject.toml  textbook_app.py  utils.py
src/: dag.py  dispatcher.py  task.py
src/planai/: __init__.py  _version.py  anthropic.py  cached_task.py  chat_task.py  cli.py  cli_cache.py  cli_optimize_prompt.py  cli_utils.py  dag.py  dispatcher.py  graph.py  graph_task.py  joined_task.py  llm_config.py  llm_interface.py  llm_task.py  llm_tool.py  media_task.py  merged_task.py  openai.py  provenance.py  pydantic_dict_wrapper.py  pydantic_output_parser.py  remote_ollama.py  ssh.py  stats.py  task.py  user_input.py  utils.py  web_interface.py
src/planai/debugging/: debug_helpers.py
src/planai/integrations/: __init__.py  browse.py  search.py
src/planai/patterns/: __init__.py  planner.py  search_fetch.py
src/planai/static/: styles.css
src/planai/static/js/: core.js  graphs.js  index.js  memory.js  mermaid.js  status.js  tasks.js  theme.js  trace.js  utils.js  workers.js
src/planai/templates/: index.html
src/planai/testing/: __init__.py  helpers.py  mock_llm.py  test_helpers.py
tests/: conftest.py
tests/planai/: test_cached_task.py  test_chat_task.py  test_cli.py  test_cli_optimize_prompt.py  test_dispatcher.py  test_graph.py  test_graph_task.py  test_joined_multiple_task.py  test_joined_task.py  test_llm_interface.py  test_llm_task.py  test_llm_tool.py  test_merged_task.py  test_openai.py  test_provenance.py  test_pydantic_output_parser.py  test_task.py  test_utils.py  test_web_interface.py
tests/planai/integrations/: test_browse.py  test_search.py
tests/planai/js/: setup.js  workers.test.js
tests/planai/patterns/: test_planner.py  test_search_fetch.py
tests/planai/testing/: test_helpers.py  test_mock_llm.py
tests/regression/: test_llm_task_with_tools.py
tests/regression/planai/: test_function_calling.py  test_structured_outputs.py
