[tool.poetry]
name = "planai"
version = "0.1.4"
description = "A simple framework for coordinating classical compute and LLM-based tasks."
authors = ["Niels Provos <planai@provos.org>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/provos/planai"
documentation = "https://planai.readthedocs.io"
keywords = ["ai", "automation", "workflow", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "planai", from = "src" },
]
exclude = ["examples"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8.2"
langchain = "^0.2.14"
python-dotenv = "^1.0.1"
ollama = "^0.3.1"
diskcache = "^5.6.3"
paramiko = "^3.4.1"
openai = "^1.42.0"
flask = "^3.0.3"
anthropic = "^0.34.2"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.0.0"
sphinx-rtd-theme = "^1.3.0"
flake8 = "^7.1.1"
black = "^24.8.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
planai = "planai.cli:main"

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme"]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.0"
sphinx_rtd_theme = "^1.3.0"