[tool.poetry]
name = "planai"
version = "0.4"
description = "A simple framework for coordinating classical compute and LLM-based tasks."
authors = ["Niels Provos <planai@provos.org>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/provos/planai"
documentation = "https://planai.readthedocs.io"
keywords = ["ai", "automation", "workflow", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "planai", from = "src" },
]
exclude = ["examples"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
diskcache = "^5.6.3"
flask = "^3.0.3"
colorama = "^0.4.6"
playwright = "^1.49.1"
beautifulsoup4 = "^4.12.3"
html2text = "^2024.2.26"
dicttoxml = "^1.7.16"
psutil = "^6.1.1"
waitress = "^3.0.2"
llm-interface = "^0.1.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
sphinx = "^7.0.0"
sphinx-rtd-theme = "^1.3.0"
flake8 = "^7.1.1"
black = "^24.8.0"
pre-commit = "^3.8.0"
docutils = ">=0.17,<0.19"
sphinx-argparse = "^0.4.0"
pytest-timeout = "^2.2.0"
pytest-cov = "^6.0.0"
pyyaml = "^6.0.1"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
planai = "planai.cli:main"

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme", "sphinx-argparse"]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.0"
sphinx_rtd_theme = "^1.3.0"
sphinx-argparse = "^0.4.0"