[tool.poetry]
name = "textbook"
version = "0.1.0"
packages = [{include = "deepsearch"}]
description = "An example to use PlanAI to do deep research on the web."
authors = ["Niels Provos"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
planai = {path = "../../", develop = true}
flask = "^3.1.0"
flask-socketio = "^5.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"