[project]
name = "releasenotes"
version = "0.1.0"
description = "Automatically generates high-quality release notes for a git repository"
authors = [
    {name = "Niels Provos",email = "planai@provos.org"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "planai @ file:///home/provos/src/planai",
    "gitpython (>=3.1.44,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
