[tool.poetry]
name = "social"
version = "0.1.0"
description = "An example to use PlanAI to get ideas for posting on social networks."
authors = ["Niels Provos"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
planai = {path = "../../", develop = true}
pymupdf4llm = "^0.0.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"